force-app/main/default/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <description>Custom object to record the Questionnaires as part of a Fraud, Error and Non-Compliance (FENC) assessment</description>
    <label>Questionnaire</label>
    <nameField>
        <displayFormat>QEQ-{0000}</displayFormat>
        <label>Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>