force-app/main/default/objects/Questionnaire__c/fields/Enable_Notes__c.field-meta.xml
<CustomField>
    <fullName>Enable_Notes__c</fullName>
    <description>Used to identify whether notes are enabled on a questionnaire.</description>
    <formula>Related_Questionnaire_Type__r.Enable_Notes__c</formula>
    <label>Enable Notes</label>
    <type>Checkbox</type>
</CustomField>