force-app/main/default/objects/Questionnaire__c/fields/Enable_Uploads__c.field-meta.xml
<CustomField>
    <fullName>Enable_Uploads__c</fullName>
    <description>Used to identify whether uploads are enabled on a questionnaire.</description>
    <formula>Related_Questionnaire_Type__r.Enable_Uploads__c</formula>
    <label>Enable Uploads</label>
    <type>Checkbox</type>
</CustomField>