force-app/main/default/objects/Questionnaire__c/fields/Evidence_Details__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Details__c</fullName>
    <description>Used to provide information on collected evidence.</description>
    <label>Evidence Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>