force-app/main/default/objects/Questionnaire__c/fields/Evidence_Provided__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to identify whether evidence was provided.</description>
    <label>Evidence Provided</label>
    <type>Checkbox</type>
</CustomField>