force-app/main/default/objects/Questionnaire__c/fields/FENC_Activity__c.field-meta.xml
<CustomField>
    <fullName>FENC_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FENC Activity</label>
    <referenceTo>FENC_Activity__c</referenceTo>
    <relationshipLabel>Questionnaires</relationshipLabel>
    <relationshipName>Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>