force-app/main/default/objects/Questionnaire__c/fields/FENC_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>FENC_Activity_Name__c</fullName>
    <formula>FENC_Activity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FENC Activity Name</label>
    <type>Text</type>
</CustomField>