force-app/main/default/objects/Questionnaire__c/fields/Questionnaire_Type__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Type__c</fullName>
    <formula>TEXT(Related_Questionnaire_Type__r.Questionnaire_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire Type</label>
    <type>Text</type>
</CustomField>