force-app/main/default/objects/Questionnaire__c/fields/Related_Questionnaire_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Questionnaire_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Questionnaire Type</label>
    <referenceTo>Questionnaire_Type__c</referenceTo>
    <relationshipLabel>Questionnaires</relationshipLabel>
    <relationshipName>Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>