force-app/main/default/objects/Questionnaire__c/recordTypes/FENC.recordType-meta.xml
<RecordType>
    <fullName>FENC</fullName>
    <active>true</active>
    <label>FENC</label>
</RecordType>